--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -24,9 +20,10 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.Pasek{
+  color : red;
 }
+
 
 @keyframes App-logo-spin {
   from {
